# geoips

./: .cspell.json  .dockerignore  .flake8  .gitignore  CHANGELOG.md  CHANGELOG.rst  CHANGELOG_TEMPLATE.md  CHANGELOG_TEMPLATE.rst  CHANGELOG_colormaps.rst  CHANGELOG_dynamic_sectors.rst  CHANGELOG_mindy.rst  CHANGELOG_products.rst  CHANGELOG_sector_adjusters.rst  CHANGELOG_sectors.rst  CODE_OF_CONDUCT.md  COMMIT_MESSAGE_TEMPLATE.md  DISTRIBUTION  Dockerfile  Dockerfile.bookworm  Dockerfile.conda  Dockerfile.real  Dockerfile.simplified  LICENSE  LICENSE_NRLMMD  Makefile  PLAN.md  README.md  VERSION  bandit.yml  base_install_and_test.sh  docker-compose.yml  environment.yml  flake.nix  interface_notes.md  obp-windbarbs-workflow-walkthrough.ipynb  original-pyproject.toml  pyproject.toml  pytest.ini  read_test.yaml  requirements.txt  (+8 more)
.config/: .flake8  black  flake8  pytest.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  release.yml
.github/PULL_REQUEST_TEMPLATE/: obp-meets-datatree-review-fixes.md
.github/hooks/: update
.github/workflows/: TEST.yaml  Testing  bandit.yaml  bandit.yml  black.yaml  brassy-notes.yaml  build-and-commit-release-note.yaml  build-and-test-in-docker.yaml  build-base-images.yaml  build-docker-image.yaml  build-html-docs.yaml  build-pdf-docs.yaml  build-stable-image.yaml  build_and_distribute.yaml  changelog-templates-unchanged.yaml  changelog-unchanged.yml  check-code.yaml  check-commit-message-style.yaml  check-old-docs-frozen.yaml  ci.yml  deploy-docs.yaml  deploy-ghpages-docs.yaml  doc-lint-test.yaml  doc-test.yaml  doc8.yaml  docker-build-test-push.yaml  flake8.yaml  hello-world.yml  integ_test.yaml  integration-selfhosted.yaml  lint.yaml  lint.yml  new-brassy-note.yaml  package-and-publish.yaml  pr-done.yaml  proper-release-note-edits.yaml  push-docker-image.yaml  pytest-short.yaml  release-note-update.yaml  release_note_update.yaml  (+8 more)
.github/workflows_archived/: build-pdf-docs.yaml  check-old-docs-frozen.yaml  docker-build-test-push.yaml  on-closed-pr.yaml
bad_schema/: bad_tc_windspeed_added_fields.yaml  bad_tc_windspeed_metadata_missing.yaml  bad_tc_windspeed_metadata_types.yaml  bad_tc_windspeed_spec_missing.yaml  bad_tc_windspeed_spec_types.yaml  bad_tc_windspeed_wrong_fields.yaml
bad_schema/gridlines/: bad_tc_windspeed_added_fields.yaml  bad_tc_windspeed_metadata_types.yaml  bad_tc_windspeed_spec_types.yaml
check_file_changed/: action.yaml
check_if_changed/: action.yaml
docker_build_push/: action.yaml
docker_build_push_if_changed/: action.yaml
dockerfiles/: Dockerfile.base  Dockerfile.proj  Dockerfile.rclone
docs/: __init__.py  auxiliary_files.yaml  available_functionality.rst  build_docs.py  build_docs.sh  build_release_notes.py  check-old-docs-frozen.py  coding_standards.rst  command_line_examples.rst  contributors.rst  deploy_pages.sh  docs-sections.yaml  documentation_strategy.rst  entry_points.rst  genindex.html  geoips_index.rst  geoips_overview.rst  git-workflow.rst  index.html  installation.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup-new-plugin.rst  software_requirements_specification.rst  style.css  update_release_note_index.py  version_control_templates.rst  xarray_standards.rst
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/architecture/: cached-files.html  ci-infrastructure.html  command_line_interface.html  data-structures.html  index.html  (+3 more)
environments/: 1.12.3_base_mamba_package_list_20240530.yml  1.13.0_base_pip_requirements_20240713.txt  1.13.0_full_mamba_package_list_20240612.yml  1.13.1_base_mamba_package_list_20240618.yml  1.14.3_base_mamba_package_list_20241209.yml  1.14.4_base_pip_requirements_20241212.txt  1.15.2_base_mamba_package_list_20250409.yml  1.16.0_base_pip_requirements_20250602.txt  1.16.1_sitetest_mamba_package_list_20250609.yml  1.16.2_base_mamba_package_list_20250610_nonzero.yml  1.17.0_sitebasetest_pip_requirements_20251018.txt  1.17.0_siteinstall_pip_requirements_20251017.txt  1.17.0_sitetest_pip_requirements_20251020.txt  1.17.1_siteinstall_pip_requirements_20251022.txt  environment.yml  environment_sitetest.yml  mamba_base_package_list_1.13.0_20240618.yml  mamba_base_package_list_1.13.0_20240713.yml  mamba_base_package_list_1.13.1_20240704.yml  mamba_base_package_list_1.14.4_20241212.yml  mamba_base_package_list_1.16.0_20250602.yml  mamba_full_package_list_1.13.0_20240717.yml  mamba_full_package_list_1.13.0_20240724.yml  mamba_full_package_list_1.14.0_20240916.yml  mamba_full_package_list_1.14.3_20241210.yml  pip_base_requirements_1.12.3_20240530.txt  pip_base_requirements_1.13.0_20240609.txt  pip_base_requirements_1.13.0_20240618.txt  pip_base_requirements_1.13.0_20240713.txt  pip_base_requirements_1.15.0_20250402.txt  pip_base_requirements_1.15.2_20250409.txt  pip_full_requirements_1.13.0_20240612.txt  pip_full_requirements_1.13.0_20240717.txt  pip_full_requirements_1.13.0_20240724.txt  pip_full_requirements_1.14.0_20240916.txt  pip_full_requirements_1.14.3_20241210.txt  pip_siteinstall_requirements_1.16.0_20250603.txt  requirements.txt  requirements_baseinstall.txt  requirements_basetest.txt  (+2 more)
geoips/: __init__.py  __version__.py  _version.py  cli.py  compare_outputs.py  constants.py  create_plugin_registries.py  create_plugin_registry.py  errors.py  generate_plugins.py  geoips_utils.py  plugin_registry.py  scripting.py
integration_tests/: base_install.sh  base_test.sh  clavrx_tutorial_test.sh  full_test.sh
jupyter/: Intro.ipynb
notes/: cleanup.md
setup/: USER_MODIFY_config  check_system_requirements.sh  config_geoips  download_test_data.py  geoips_conda_init_setup  repo_clone_update_install.sh  test-data-urls.yaml
tests/: PR_test_sector_adjusters.sh  PR_test_update_dynamic_sectors.sh  PR_test_update_sectors.sh  README.md  conftest.py  download_noaa_aws.sh  test_all.sh  test_base_install.sh  test_base_install_low_memory.sh  test_full_install.sh  test_yaml_plugins.py  uncompress_test_data.sh
v2_migration_tools/: cst_transformer.py  module_to_class.py
(+4356 files in other folders)
