[project]
name = "geoips"
version = "0.0.0"
description = "Geolocated Information Processing System"
readme = "README.md"

maintainers = [ { name = "GeoIPS ", email = "geoips@nrlmry.navy.mil" } ]
authors = [ { name = "GeoIPS ", email = "geoips@nrlmry.navy.mil" } ]
requires-python = ">=3.11.0,<3.13.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "alphashape>=1.3.1",
  "astropy",
  "cartopy>=0.23",
  "colorama",
  "ephem",
  "h5py",
  "hdf5plugin",
  "isodate",
  "jsonschema>4.18",
  "matplotlib>=3.7",
  "netcdf4>1.7",
  "numexpr",
  "numpy>=2.3,<2.4",
  "psutil",
  "pyaml-env",
  "pydantic>=2.10",
  "pyhdf",
  "pyorbital",
  "pypublicdecompwt",
  "pyresample",
  "pyyaml",
  "rasterio",
  "referencing",
  "rio-cogeo",
  "satpy",
  "scikit-image",
  "scipy>1.2",
  "setuptools<70",
  "tabulate",
  "tqdm",
  "xarray>=2025.3.1",
]
optional-dependencies.debug = [ "ipython" ]
optional-dependencies.dev = [ "poetry-dynamic-versioning"] # pygrib requires setuptools but does not list it as a dependency
optional-dependencies.doc = [
  "brassy>=0.0.3",
  "m2r2",
  "mistune==0.8.4",
  "pydata-sphinx-theme",
  "rich",
  "rich-argparse",
  "sphinx<7.2",
  "sphinx-argparse",
  "sphinx-design",
  "sphinxcontrib-autoprogram",
  "sphinxcontrib-mermaid",
]
optional-dependencies.lint = [
  "bandit",
  "black",
  "doc8",
  "flake8",
  "flake8-docstrings",
  "flake8-rst",
  "flake8-rst-docstrings",
  "pinkrst",
  "prettier",
  "pylint",
]
optional-dependencies.test = [ "pixelmatch", "pytest", "pytest-cov", "pytest-mock>=3.14", "pytest-xdist" ]
scripts.convert_trackfile_to_yaml = "geoips.commandline.convert_trackfile_to_yaml:main"
scripts.create_plugin_registries = "geoips.commandline.commandline_interface:main"
scripts.expose = "geoips.geoips_utils:expose_geoips_commands"
scripts.geoips = "geoips.commandline.commandline_interface:main"
scripts.list_available_plugins = "geoips.commandline.list_available_plugins:main"
scripts.run_procflow = "geoips.commandline.commandline_interface:main"
scripts.update_tc_tracks_database = "geoips.commandline.update_tc_tracks_database:main"
scripts.xml_to_yaml_sector = "geoips.commandline.xml_to_yaml_sector:main"

[tool.setuptools]
packages = ["geoips"]

#[tool.setuptools.find]
#where = ["."]
#include = ["geoips/*"]
#exclude = ["setup*", "environments*", "tests*", "test*", "*.tests", "*.test"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = false # don't include local-version hash; date doesn't appear by deafult
style = "pep440" # pep440 is deafult; can remove later on; used for : keeping 0.0.8 as the default install until 0.0.9 is out
#style = "semver"
#tag-branch = "feature-poetry"
strict = false
pattern = "(?x)^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

# NOTE: You must CREATE a _version.py file and commit it via git!
#     That file will have 0.0.0 as the version - which will get updated when
#     pip installed.
# FURTHER NOTE: pip install -e will actually NOT update _version.py.
#     if you must have a valid version in your local editable install (which
#     is typically not necessary), you can manually update _version.py
#     with the following steps:
#     > pip install poetry-dynamic-versioning
#     > poetry-dynamic-versioning
#     (those steps are called automatically when running pip install, but
#     NOT when running pip install -e)
[tool.poetry-dynamic-versioning.substitution]
files = [ "*/_version.py" ]
